--- a/style.css
+++ b/style.css
@@ -106,3 +106,20 @@ input:checked + .slider {
 input:checked + .slider:before {
   transform: translateX(26px);
 }
+
+.chips-container{
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+.chip p{
+  background-color: rgb(211, 208, 208);
+  padding: 5px 13px;
+  border-radius: 20px;
+}
+.chip span{
+  color:#cf0909;
+  margin-left: 15px;
+  cursor: pointer;
+}
