--- a/style.css
+++ b/style.css
@@ -123,3 +123,39 @@ input:checked + .slider:before {
   margin-left: 15px;
   cursor: pointer;
 }
+.tabContainer{
+  margin-top:50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.tabHeadings{
+  border:3px solid black;
+  border-radius:3px;
+  padding:10px 23px;
+  /* margin:20px; */
+  cursor:pointer;
+  
+}
+.tabHeader{
+display: flex;
+width:300px;
+justify-content: center;
+}
+.activeComp{
+  border:3px solid black;
+  width:300px;
+  height:300px;
+}
+.profile{
+  display:flex;
+  flex-direction: column;
+  gap:10px;
+  padding:30px;
+}
+.navBtns{
+  margin-top:30px;
+  width:300px;
+  display: flex;
+  justify-content: space-around;
+}
