--- a/style.css
+++ b/style.css
@@ -22,90 +22,7 @@
     text-decoration: line-through;
 }
 
-/* Light Mode */
-.light-mode {
-  background-color: #f0f0f0;
-  color: #333;
-}
 
-/* Dark Mode */
-.dark-mode {
-  background-color: #121212;
-  color: white;
-}
-
-.container {
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-h1 {
-  font-size: 32px;
-  margin-bottom: 30px;
-}
-
-.toggle-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.mode-text {
-  font-size: 18px;
-  font-weight: bold;
-  color: inherit;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 50px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  border-radius: 50px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #4caf50;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
 
 .chips-container{
   display: flex;
@@ -158,4 +75,25 @@ justify-content: center;
   width:300px;
   display: flex;
   justify-content: space-around;
+}
+
+
+.themesDiv{
+  display: flex;
+  margin:100px;
+  padding:100px;
+  justify-content: center;
+  gap:400px;
+}
+#lightTheme{
+  font-size:100px;
+}
+#darkTheme{
+  font-size:100px;
+}
+.dark{
+  background-color: rgb(39, 38, 38);
+  color:white;
+  height: 100vh;
+  width:100%;
 }
